--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "rainbet-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.5",
-    "node-cron": "^4.2.1",
-    "node-fetch": "^3.3.2",
-    "path-to-regexp": "^6.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+	"name": "rainbet-server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
+		"serve": "firebase emulators:start --only functions",
+		"deploy": "firebase deploy --only functions"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"axios": "^1.11.0",
+		"bcryptjs": "^3.0.2",
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.1",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.16.5",
+		"node-cron": "^4.2.1",
+		"node-fetch": "^3.3.2",
+		"path-to-regexp": "^6.2.1",
+		"firebase-admin": "^12.0.0",
+		"firebase-functions": "^4.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10"
+	}
 }
