--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js",
-		"serve": "firebase emulators:start --only functions",
-		"deploy": "firebase deploy --only functions"
+		"start": "node index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,9 +20,7 @@
 		"mongoose": "^8.16.5",
 		"node-cron": "^4.2.1",
 		"node-fetch": "^3.3.2",
-		"path-to-regexp": "^6.2.1",
-		"firebase-admin": "^12.0.0",
-		"firebase-functions": "^4.0.0"
+		"path-to-regexp": "^6.2.1"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.10"
